// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/Selector Selector custom flatList styles 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgba(21, 28, 44, 0.2)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      },
      {
        "backgroundColor": "transparent",
      },
    ]
  }
  testID="Pressable"
>
  <View
    style={
      [
        {
          "backgroundColor": "#EDEFF3",
          "borderColor": "rgba(21, 28, 44, 0.1)",
          "borderRadius": 12,
          "borderWidth": 1,
          "paddingVertical": 8,
          "position": "absolute",
        },
        {
          "width": 2,
        },
        {
          "width": 2,
        },
        {
          "top": 77,
        },
        {
          "maxHeight": 244,
        },
      ]
    }
  >
    <RCTScrollView
      ListEmptyComponent={<ListEmptySelector />}
      bounces={false}
      data={
        [
          {
            "label": "list",
            "value": "list",
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={0.0001}
      stickyHeaderIndices={[]}
      viewabilityConfigCallbackPairs={[]}
    >
      <View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <View
            accessibilityLabel="list"
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "justifyContent": "center",
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                undefined,
                {
                  "backgroundColor": "rgba(91, 153, 249, 0.1)",
                },
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#20242D",
                    "fontFamily": "Inter-Medium",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "minHeight": 20,
                  },
                  undefined,
                ]
              }
            >
              list
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/Selector Selector custom with array in selectedItem 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgba(21, 28, 44, 0.2)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      },
      {
        "backgroundColor": "transparent",
      },
    ]
  }
  testID="Pressable"
>
  <View
    style={
      [
        {
          "backgroundColor": "#EDEFF3",
          "borderColor": "rgba(21, 28, 44, 0.1)",
          "borderRadius": 12,
          "borderWidth": 1,
          "paddingVertical": 8,
          "position": "absolute",
        },
        undefined,
        {
          "width": 200,
        },
        {
          "top": 77,
        },
        {
          "maxHeight": 244,
        },
      ]
    }
  >
    <RCTScrollView
      ListEmptyComponent={<ListEmptySelector />}
      bounces={false}
      data={
        [
          {
            "label": "JavaScript",
            "value": 1,
          },
          {
            "label": "Rust",
            "value": 2,
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={0.0001}
      stickyHeaderIndices={[]}
      viewabilityConfigCallbackPairs={[]}
    >
      <View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <View
            accessibilityLabel="JavaScript"
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "justifyContent": "center",
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                undefined,
                {
                  "backgroundColor": "rgba(91, 153, 249, 0.1)",
                },
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#20242D",
                    "fontFamily": "Inter-Medium",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "minHeight": 20,
                  },
                  undefined,
                ]
              }
            >
              JavaScript
            </Text>
          </View>
        </View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <View
            accessibilityLabel="Rust"
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "justifyContent": "center",
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                undefined,
                null,
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#353A45",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "minHeight": 20,
                  },
                  undefined,
                ]
              }
            >
              Rust
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/Selector Selector custom with empty array in selectedItem 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgba(21, 28, 44, 0.2)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      },
      {
        "backgroundColor": "transparent",
      },
    ]
  }
  testID="Pressable"
>
  <View
    style={
      [
        {
          "backgroundColor": "#EDEFF3",
          "borderColor": "rgba(21, 28, 44, 0.1)",
          "borderRadius": 12,
          "borderWidth": 1,
          "paddingVertical": 8,
          "position": "absolute",
        },
        undefined,
        {
          "width": 200,
        },
        {
          "top": 77,
        },
        {
          "maxHeight": 244,
        },
      ]
    }
  >
    <RCTScrollView
      ListEmptyComponent={<ListEmptySelector />}
      bounces={false}
      data={
        [
          {
            "label": "JavaScript",
            "value": 1,
          },
          {
            "label": "Rust",
            "value": 2,
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={0.0001}
      stickyHeaderIndices={[]}
      viewabilityConfigCallbackPairs={[]}
    >
      <View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <View
            accessibilityLabel="JavaScript"
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "justifyContent": "center",
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                undefined,
                null,
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#353A45",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "minHeight": 20,
                  },
                  undefined,
                ]
              }
            >
              JavaScript
            </Text>
          </View>
        </View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <View
            accessibilityLabel="Rust"
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "justifyContent": "center",
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                undefined,
                null,
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#353A45",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "minHeight": 20,
                  },
                  undefined,
                ]
              }
            >
              Rust
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/Selector render correct renderItem TouchableHighlight with custom style 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgba(21, 28, 44, 0.2)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      },
      {
        "backgroundColor": "transparent",
      },
    ]
  }
  testID="Pressable"
>
  <View
    style={
      [
        {
          "backgroundColor": "#EDEFF3",
          "borderColor": "rgba(21, 28, 44, 0.1)",
          "borderRadius": 12,
          "borderWidth": 1,
          "paddingVertical": 8,
          "position": "absolute",
        },
        undefined,
        {
          "width": 200,
        },
        {
          "top": 85,
        },
        {
          "maxHeight": 244,
        },
      ]
    }
  >
    <RCTScrollView
      ListEmptyComponent={<ListEmptySelector />}
      bounces={false}
      data={
        [
          {
            "label": "list",
            "value": "list",
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={0.0001}
      stickyHeaderIndices={[]}
      viewabilityConfigCallbackPairs={[]}
    >
      <View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <View
            accessibilityLabel="list"
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "justifyContent": "center",
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                {
                  "height": 10,
                },
                {
                  "backgroundColor": "red",
                },
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#20242D",
                    "fontFamily": "Inter-Medium",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "minHeight": 20,
                  },
                  undefined,
                ]
              }
            >
              list
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/Selector render correct renderItem Typography  with custom font 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgba(21, 28, 44, 0.2)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      },
      {
        "backgroundColor": "transparent",
      },
    ]
  }
  testID="Pressable"
>
  <View
    style={
      [
        {
          "backgroundColor": "#EDEFF3",
          "borderColor": "rgba(21, 28, 44, 0.1)",
          "borderRadius": 12,
          "borderWidth": 1,
          "paddingVertical": 8,
          "position": "absolute",
        },
        undefined,
        {
          "width": 200,
        },
        {
          "top": 85,
        },
        {
          "maxHeight": 244,
        },
      ]
    }
  >
    <RCTScrollView
      ListEmptyComponent={<ListEmptySelector />}
      bounces={false}
      data={
        [
          {
            "label": "list",
            "value": "list",
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={0.0001}
      stickyHeaderIndices={[]}
      viewabilityConfigCallbackPairs={[]}
    >
      <View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <View
            accessibilityLabel="list"
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "justifyContent": "center",
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                undefined,
                {
                  "backgroundColor": "rgba(91, 153, 249, 0.1)",
                },
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#F54C3D",
                    "fontFamily": "Inter-Bold",
                    "fontSize": 18,
                    "lineHeight": 22,
                    "minHeight": 22,
                  },
                  undefined,
                ]
              }
            >
              list
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/Selector render correct renderItem Typography with custom style 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgba(21, 28, 44, 0.2)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      },
      {
        "backgroundColor": "transparent",
      },
    ]
  }
  testID="Pressable"
>
  <View
    style={
      [
        {
          "backgroundColor": "#EDEFF3",
          "borderColor": "rgba(21, 28, 44, 0.1)",
          "borderRadius": 12,
          "borderWidth": 1,
          "paddingVertical": 8,
          "position": "absolute",
        },
        undefined,
        {
          "width": 200,
        },
        {
          "top": 85,
        },
        {
          "maxHeight": 244,
        },
      ]
    }
  >
    <RCTScrollView
      ListEmptyComponent={<ListEmptySelector />}
      bounces={false}
      data={
        [
          {
            "label": "list",
            "value": "list",
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={0.0001}
      stickyHeaderIndices={[]}
      viewabilityConfigCallbackPairs={[]}
    >
      <View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <View
            accessibilityLabel="list"
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "justifyContent": "center",
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                undefined,
                {
                  "backgroundColor": "rgba(91, 153, 249, 0.1)",
                },
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#20242D",
                    "fontFamily": "Inter-Medium",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "minHeight": 20,
                  },
                  {
                    "backgroundColor": "red",
                  },
                ]
              }
            >
              list
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/Selector renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgba(21, 28, 44, 0.2)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      },
      {
        "backgroundColor": "transparent",
      },
    ]
  }
  testID="Pressable"
>
  <View
    style={
      [
        {
          "backgroundColor": "#EDEFF3",
          "borderColor": "rgba(21, 28, 44, 0.1)",
          "borderRadius": 12,
          "borderWidth": 1,
          "paddingVertical": 8,
          "position": "absolute",
        },
        undefined,
        {
          "width": 200,
        },
        {
          "top": 85,
        },
        {
          "maxHeight": 244,
        },
      ]
    }
  >
    <RCTScrollView
      ListEmptyComponent={<ListEmptySelector />}
      bounces={false}
      data={
        [
          {
            "label": "list",
            "value": "list",
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={0.0001}
      stickyHeaderIndices={[]}
      viewabilityConfigCallbackPairs={[]}
    >
      <View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <View
            accessibilityLabel="list"
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "justifyContent": "center",
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                undefined,
                null,
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#353A45",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "minHeight": 20,
                  },
                  undefined,
                ]
              }
            >
              list
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/Selector renders correctly with bottom padding largeList 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgba(21, 28, 44, 0.2)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      },
      {
        "backgroundColor": "transparent",
      },
    ]
  }
  testID="Pressable"
>
  <View
    style={
      [
        {
          "backgroundColor": "#EDEFF3",
          "borderColor": "rgba(21, 28, 44, 0.1)",
          "borderRadius": 12,
          "borderWidth": 1,
          "paddingVertical": 8,
          "position": "absolute",
        },
        undefined,
        {
          "width": 200,
        },
        {
          "top": 85,
        },
        {
          "maxHeight": 244,
        },
      ]
    }
  >
    <RCTScrollView
      ListEmptyComponent={<ListEmptySelector />}
      bounces={false}
      data={
        [
          {
            "label": "1",
            "value": "1",
          },
          {
            "label": "1",
            "value": "1",
          },
          {
            "label": "1",
            "value": "1",
          },
          {
            "label": "1",
            "value": "1",
          },
          {
            "label": "1",
            "value": "1",
          },
          {
            "label": "1",
            "value": "1",
          },
          {
            "label": "1",
            "value": "1",
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={0.0001}
      stickyHeaderIndices={[]}
      viewabilityConfigCallbackPairs={[]}
    >
      <View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <View
            accessibilityLabel="1"
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "justifyContent": "center",
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                undefined,
                {
                  "backgroundColor": "rgba(91, 153, 249, 0.1)",
                },
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#20242D",
                    "fontFamily": "Inter-Medium",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "minHeight": 20,
                  },
                  undefined,
                ]
              }
            >
              1
            </Text>
          </View>
        </View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <View
            accessibilityLabel="1"
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "justifyContent": "center",
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                undefined,
                {
                  "backgroundColor": "rgba(91, 153, 249, 0.1)",
                },
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#20242D",
                    "fontFamily": "Inter-Medium",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "minHeight": 20,
                  },
                  undefined,
                ]
              }
            >
              1
            </Text>
          </View>
        </View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <View
            accessibilityLabel="1"
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "justifyContent": "center",
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                undefined,
                {
                  "backgroundColor": "rgba(91, 153, 249, 0.1)",
                },
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#20242D",
                    "fontFamily": "Inter-Medium",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "minHeight": 20,
                  },
                  undefined,
                ]
              }
            >
              1
            </Text>
          </View>
        </View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <View
            accessibilityLabel="1"
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "justifyContent": "center",
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                undefined,
                {
                  "backgroundColor": "rgba(91, 153, 249, 0.1)",
                },
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#20242D",
                    "fontFamily": "Inter-Medium",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "minHeight": 20,
                  },
                  undefined,
                ]
              }
            >
              1
            </Text>
          </View>
        </View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <View
            accessibilityLabel="1"
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "justifyContent": "center",
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                undefined,
                {
                  "backgroundColor": "rgba(91, 153, 249, 0.1)",
                },
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#20242D",
                    "fontFamily": "Inter-Medium",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "minHeight": 20,
                  },
                  undefined,
                ]
              }
            >
              1
            </Text>
          </View>
        </View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <View
            accessibilityLabel="1"
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "justifyContent": "center",
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                undefined,
                {
                  "backgroundColor": "rgba(91, 153, 249, 0.1)",
                },
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#20242D",
                    "fontFamily": "Inter-Medium",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "minHeight": 20,
                  },
                  undefined,
                ]
              }
            >
              1
            </Text>
          </View>
        </View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <View
            accessibilityLabel="1"
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "justifyContent": "center",
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                undefined,
                {
                  "backgroundColor": "rgba(91, 153, 249, 0.1)",
                },
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#20242D",
                    "fontFamily": "Inter-Medium",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "minHeight": 20,
                  },
                  undefined,
                ]
              }
            >
              1
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
